#191 Compliant with Java 17